# radmc3d

./: CMakeLists.txt
manual/sphinx/: conf.py  versiontracker.rst
manual/sphinx/_build/html/: .buildinfo  basicstructure.html  binaryio.html  clioptions.html  dustradtrans.html  genindex.html  gridding.html  imagesspectra.html  index.html  inputoutputfiles.html  installation.html  internalsetup.html  introduction.html  lineradtrans.html  objects.inv  opacitieswww.html  optionscompat.html  overview.html  pythontools.html  quickstart.html  search.html  searchindex.js  stars.html  tipsandtricks.html  toolsinside.html  versiontracker.html  vtkoutput.html
manual/sphinx/_build/latex/: radmc3d.fdb_latexmk  radmc3d.fls  radmc3d.ilg  radmc3d.tex
src/: CMakeLists.txt  amr_module.f90  lines_module.f90
